--- a/index.html
+++ b/index.html
@@ -294,10 +294,13 @@
               <img src="./assets/icons/alissa.svg" alt="" />
             </div>
             <div>
+              <a href="https://www.instagram.com/uz_coder_007/" target="_blank">
               <img src="./assets/icons/instagram.svg" alt="" />
+              </a>
             </div>
             <div>
-              <img src="./assets/icons/linkedin.svg" alt="" />
+         
+              <a href="https://www.linkedin.com/in/sherali-xo-janazarov-9ab100284/">     <img src="./assets/icons/linkedin.svg" alt="" /></a>
             </div>
           </div>
           <div class="dev-info">
